--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.defer-datasource-initialization=true
+
+# Disables Spring Security auto-configuration during automated tests
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
