--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 	</profiles>
 
 	<build>
+		<finalName>app-tennis</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
